coala.css
/* ... */
.page-footer li {
  padding: 0.2em;
}

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}


/* Buttons */

.btn,
.btn-large {
  background-color: black;
}

.btn:hover,
.btn-large:hover {
  background-color: #424242;
}

/* Stamp Buttons */

.stamp .fa-github-alt, .stamp .fa-rocket{
  font-size: 3em;
  padding-left: 0.2em;
  background: rgba(0, 0, 0, 0.2);
}

.stamp {
  display: inline-flex;
  color: grey ;
  justify-content: center;
}

.stamp:hover {
  cursor: pointer;
  background: rgba(0, 0, 0, 0.7) !important;
}

.stamp span {
  font-size: 1.2em;
  padding: 0.5em 0.5em 0em 1em;
  background: rgba(0, 0, 0, 0.2);
}

/* Chips */

a.chip i {
  float: left;
  margin: 0 8px 0 -12px;
  height: 32px;
  width: 32px;
  border-radius: 50%;
  font-size: 1.5em;
  padding: 0.3em 0 0 0.3em;
}


/* Cards */

.card-content li {
  margin-bottom: 1em;
}

/* User Card */

.user .parent-wrapper {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 1em;
}

.user .parent {
  justify-content: center;
}

.user .card {
  width: 200px;
  margin-left: 0.5em;
  margin-right: 0.5em;
  display: inline-grid;
}

.user .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
  margin-right: 0;
}

.user .data.thumbnail {
  max-height: 100px;
}

.user .empty {
  background-color: #eceff1;
  height: 5em;
}

.user .data {
  background-color: #263238;
  color: white;
  height: 300px;
  padding: 10px;
}

.user .dp {
  margin-top: -5em;
  border-radius: 100%;
}

.user .name {
  font-size: 1.1em;
  font-weight: 300;
  text-align: center;
}

.user .handle {
  font-size: 1em;
  text-align: center;
  opacity: 0.7;
  padding: 0.5em;
}

.user .bio {
  font-size: 0.8em;
  text-align: center;
  padding-top: 0.5em;
}

.user .stats {
  margin-bottom: 0px;
  text-align: center;
  bottom: 0;
  position: absolute;
  padding-bottom: 1em;
  left: 0;
  right: 0;
  word-wrap: break-word;
  margin-top: 2em;
  text-align: center;
  letter-spacing: 0.1em;
}

.user .stats .row {
  margin-bottom: 5px;
  display: flex;
  text-align: center;
}

.user .link {
  bottom: 0;
  margin-top: 1em;
}

.user .stats .row .stat {
  flex-grow: 1;
}

/* Outline card */

.outline .card-content {
  height: 250px;
}

.outline .card-action {
  padding: 10px;
  min-height: 70px;
}

.outline .card-action span {
  display: inline-block;
}

.outline .card-action span a {
  font-size: 1.2em;
  color: darkcyan!important;
  text-transform: none!important;
  font-family: 'Roboto Mono',menlo,monospace;
}

.outline .flag {
  bottom: 0;
  position: absolute;
  width: 100%;
}

/* Search Bar */

.searchbar.input-field {
  padding-left: 4em;
}

.searchbar #search {
  font-size: 2em;
  border: none;
  font-family: Roboto;
  font-weight: 500;
  color: black;
  box-shadow: none;
}

.searchbar.input-field input[type=search] {
  background-color: lightgray;
  padding-left: 0.5em;
}

.searchbar ::-webkit-input-placeholder {
  font-weight: 200;
  color: #9e9e9e;
}

.searchbar ::-moz-placeholder {
  text-align: center;
  font-weight: 200;
  color: black;
}

.searchbar :-ms-input-placeholder {
  font-weight: 200;
  color: black;
}


/* Theatre View */

.theatre.modal {
  width: 100%;
  border-radius: 0;
  z-index: 1003;
  opacity: 1;
  transform: scaleX(1);
  top: 10%;
}

.theatre.modal.margin {
  width: 90%;
}

.theatre .modal-content {
  display: flex;
  padding: 0;
}

.theatre .profile,
.theatre .dashboard {
  max-width: none;
  padding-left: 1vw;
  padding-right: 1vw;
}

.theatre .dashboard {
  background-color: darkslategrey;
  width: 70%;
}

.theatre .profile {
  background-color: #000;
  color: #fff;
  width: 30%;
}

.theatre .name {
  font-size: 3.5vw;
  text-align: center;
  padding-right: 1em;
  padding-top: 1em;
  padding-bottom: 0.1em;
  font-weight: 100;
  overflow-wrap: break-word;
}

.theatre .small-heading {
  font-size: 0.9em;
  padding: 0.5em;
  font-weight: 400;
  color: lightgoldenrodyellow;
  letter-spacing: 0.1em;
}

.theatre .description {
  color: lightgrey;
  text-align: justify;
  font-size: 1.1em;
  font-family: Roboto;
  font-weight: 300;
  padding: 1em;
  overflow-wrap: break-word;
}

.theatre .settings-options {
  color: lightgrey;
}

.theatre .settings {
  padding: 0 0 0.5em 0;
}

.theatre .label {
  font-size: 13px;
  text-transform: uppercase;
  letter-spacing: 0.1em;
}

.theatre .settings,
.theatre .settings .chip {
  color: cadetblue;
  border-radius: 0px;
}

.theatre .detail-row {
  bottom: 0;
  left: 0;
  right: 0;
}

.theatre ul:not(.browser-default) {
  margin-left: 1em;
}

.theatre ul:not(.browser-default) li {
  margin-left: 1em;
  list-style-type: disc;
}

.theatre li {
  list-style-type: inherit;
}

.theatre .description h4 {
  font-size: 1.1em;
  letter-spacing: 0.1em;
  color: wheat;
  text-transform: uppercase;
}

.theatre .description h5 {
  letter-spacing: 0.1em;
  color: wheat;
  font-size: 1em;
}

.arrows {
  position: fixed;
  left: 0px;
  bottom: 0px;
  height: 60px;
  width: 100%;
  background: transparent;
  z-index: 9999;
  padding-top: 1em;
}

.arrow-click {
  font-size: 2em!important;
  color: lightgrey;
  cursor: pointer;
}

.arrow-move-right, .arrow-move-left {
  display: inline;
  position: fixed;
  bottom: 40px;
  z-index: 9999;
}

.arrow-move-right {
  right: 20%;
}

.arrow-move-left {
  left: 20%;
}

.theatre .description a {
  color: azure;
}

.theatre .dashboard span {
  color: white;
}

/* Results View */

.results {
  padding: 1em;
  margin-top: 1em;
}

.results .origin {
  padding: 0.5em;
  background-color: #263238;
  color: white;
}

.results .severity {
  padding: 0.5em;
  background-color: #37474f;
  color: white;
}

.results div.label {
  margin-top: 1em;
  padding: 0.5em;
  background-color: #455a64;
  color: white;
}

/* coala Online View */

.coala-online select {
  display: block;
}

.coala-online .card-panel {
  padding: 12px;
  margin: 0rem 0 0rem 0;
  border-radius: 2px;
  background-color: #fff;
}
/* ... */

